extern/PICM114GL/include/PCI_M114.h

// Velocity Move
I16 PASCAL _m114_tv_move(U16 SwitchCardNo, U16 AxisNo, U8 Dir, U32 StrVel, U32 MaxVel, F32 Tacc);
I16 PASCAL _m114_sv_move(U16 SwitchCardNo, U16 AxisNo, U8 Dir, U32 StrVel, U32 MaxVel, F32 Tacc);
I16 PASCAL _m114_fix_speed_range(U16 SwitchCardNo, U16 AxisNo, U32 MaxVel);
I16 PASCAL _m114_unfix_speed_range(U16 SwitchCardNo, U16 AxisNo);
I16 PASCAL _m114_v_change(U16 SwitchCardNo, U16 AxisNo, U32 NewVel, F32 Time);
I16 PASCAL _m114_get_current_speed(U16 SwitchCardNo, U16 AxisNo, U32 *speed);
// Single-Axis Move
I16 PASCAL _m114_start_tr_move(U16 SwitchCardNo, U16 AxisNo, I32 Dist, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_ta_move(U16 SwitchCardNo, U16 AxisNo, I32 Pos, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_sr_move(U16 SwitchCardNo, U16 AxisNo, I32 Dist, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_sa_move(U16 SwitchCardNo, U16 AxisNo, I32 Pos, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_tr_move_after_axis(U16 SwitchCardNo, U16 AxisNo, U16 LeadingAxes, I32 Dist, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_ta_move_after_axis(U16 SwitchCardNo, U16 AxisNo, U16 LeadingAxes, I32 Pos, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_sr_move_after_axis(U16 SwitchCardNo, U16 AxisNo, U16 LeadingAxes, I32 Dist, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_sa_move_after_axis(U16 SwitchCardNo, U16 AxisNo, U16 LeadingAxes, I32 Pos, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_p_change(U16 SwitchCardNo, U16 AxisNo, I32 NewPos); //abs
// 2-Axis Linear Move
I16 PASCAL _m114_start_tr_line2(U16 SwitchCardNo, U16 *AxisArray, I32 DistX, I32 DistY, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_ta_line2(U16 SwitchCardNo, U16 *AxisArray, I32 PosX, I32 PosY, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_sr_line2(U16 SwitchCardNo, U16 *AxisArray, I32 DistX, I32 DistY, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_sa_line2(U16 SwitchCardNo, U16 *AxisArray, I32 PosX, I32 PosY, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_tr_move_xy(U16 SwitchCardNo, I32 DistX, I32 DistY, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_ta_move_xy(U16 SwitchCardNo, I32 PosX, I32 PosY, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_sr_move_xy(U16 SwitchCardNo, I32 DistX, I32 DistY, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_sa_move_xy(U16 SwitchCardNo, I32 PosX, I32 PosY, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_tr_move_zu(U16 SwitchCardNo, I32 DistZ, I32 DistU, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_ta_move_zu(U16 SwitchCardNo, I32 PosZ, I32 PosU, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_sr_move_zu(U16 SwitchCardNo, I32 DistZ, I32 DistU, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_sa_move_zu(U16 SwitchCardNo, I32 PosZ, I32 PosU, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_tr_move_ab(U16 SwitchCardNo, I32 DistA, I32 DistB, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_ta_move_ab(U16 SwitchCardNo, I32 PosA, I32 PosB, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_sr_move_ab(U16 SwitchCardNo, I32 DistA, I32 DistB, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_sa_move_ab(U16 SwitchCardNo, I32 PosA, I32 PosB, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_tr_move_cd(U16 SwitchCardNo, I32 DistC, I32 DistD, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_ta_move_cd(U16 SwitchCardNo, I32 PosC, I32 PosD, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_sr_move_cd(U16 SwitchCardNo, I32 DistC, I32 DistD, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_sa_move_cd(U16 SwitchCardNo, I32 PosC, I32 PosD, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
// 3-Axis Linear Move
I16 PASCAL _m114_start_tr_line3(U16 SwitchCardNo, U16 *AxisArray, I32 DistX, I32 DistY, I32 DistZ, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_ta_line3(U16 SwitchCardNo, U16 *AxisArray, I32 PosX, I32 PosY, I32 PosZ, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_sr_line3(U16 SwitchCardNo, U16 *AxisArray, I32 DistX, I32 DistY, I32 DistZ, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_sa_line3(U16 SwitchCardNo, U16 *AxisArray, I32 PosX, I32 PosY, I32 PosZ, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);