extern/PICM114GL/include/PCI_M114.cs


            // Velocity Move
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_tv_move(ushort SwitchCardNo, ushort AxisNo, byte Dir, uint StrVel, uint MaxVel, float Tacc);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_sv_move(ushort SwitchCardNo, ushort AxisNo, byte Dir, uint StrVel, uint MaxVel, float Tacc);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_fix_speed_range(ushort SwitchCardNo, ushort AxisNo, uint MaxVel);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_unfix_speed_range(ushort SwitchCardNo, ushort AxisNo);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_v_change(ushort SwitchCardNo, ushort AxisNo, uint NewVel, float Time);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_get_current_speed(ushort SwitchCardNo, ushort AxisNo, ref uint speed);

            // Single-Axis Move
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_tr_move(ushort SwitchCardNo, ushort AxisNo, int Dist, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_ta_move(ushort SwitchCardNo, ushort AxisNo, int Pos, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_sr_move(ushort SwitchCardNo, ushort AxisNo, int Dist, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_sa_move(ushort SwitchCardNo, ushort AxisNo, int Pos, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_tr_move_after_axis(ushort SwitchCardNo, ushort AxisNo, ushort LeadingAxes, int Dist, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_ta_move_after_axis(ushort SwitchCardNo, ushort AxisNo, ushort LeadingAxes, int Pos, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_sr_move_after_axis(ushort SwitchCardNo, ushort AxisNo, ushort LeadingAxes, int Dist, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_sa_move_after_axis(ushort SwitchCardNo, ushort AxisNo, ushort LeadingAxes, int Pos, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_p_change(ushort SwitchCardNo, ushort AxisNo, int NewPos);

            // 2-Axis Linear Move
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_tr_move_xy(ushort SwitchCardNo, int DistX, int DistY, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_ta_move_xy(ushort SwitchCardNo, int PosX, int PosY, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_sr_move_xy(ushort SwitchCardNo, int DistX, int DistY, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_sa_move_xy(ushort SwitchCardNo, int PosX, int PosY, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_tr_move_zu(ushort SwitchCardNo, int DistZ, int DistU, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_ta_move_zu(ushort SwitchCardNo, int PosZ, int PosU, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_sr_move_zu(ushort SwitchCardNo, int DistZ, int DistU, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_sa_move_zu(ushort SwitchCardNo, int PosZ, int PosU, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_tr_line2(ushort SwitchCardNo, ushort[] AxisArray, int DistX, int DistY, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_ta_line2(ushort SwitchCardNo, ushort[] AxisArray, int PosX, int PosY, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_sr_line2(ushort SwitchCardNo, ushort[] AxisArray, int DistX, int DistY, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_sa_line2(ushort SwitchCardNo, ushort[] AxisArray, int PosX, int PosY, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_tr_move_ab(ushort SwitchCardNo, int DistA, int DistB, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_ta_move_ab(ushort SwitchCardNo, int PosA, int PosB, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_sr_move_ab(ushort SwitchCardNo, int DistA, int DistB, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_sa_move_ab(ushort SwitchCardNo, int PosA, int PosB, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_tr_move_cd(ushort SwitchCardNo, int DistC, int DistD, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_ta_move_cd(ushort SwitchCardNo, int PosC, int PosD, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_sr_move_cd(ushort SwitchCardNo, int DistC, int DistD, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_sa_move_cd(ushort SwitchCardNo, int PosC, int PosD, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            // 3-Axis Linear Move
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_tr_line3(ushort SwitchCardNo, ushort[] AxisArray, int DistX, int DistY, int DistZ, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_ta_line3(ushort SwitchCardNo, ushort[] AxisArray, int PosX, int PosY, int PosZ, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_sr_line3(ushort SwitchCardNo, ushort[] AxisArray, int DistX, int DistY, int DistZ, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_sa_line3(ushort SwitchCardNo, ushort[] AxisArray, int PosX, int PosY, int PosZ, uint StrVel, uint MaxVel, float Tacc, float Tdec);
